Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -23,6 +23,9 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 
 - `UTC` → 전 세계 공통으로 사용하는 표준 시간 기준
 - `UTC+9` → 한국에서 사용하는 현지 시간 기준 (UTC보다 9시간 빠름)
+- UTC/UTC+9 혼용 시 날짜·시간 변환 과정에서 하루 밀림(±1일) 오류가 발생할 수 있음
+</br>
+
 - `sap.ui.core.format.DateFormat.getInstance({ pattern: "yyyyMMdd", UTC: true })` → 날짜를 UTC 기준으로 yyyyMMdd 형식 문자열로 변환하는 포맷 객체 생성
 - `format()` → Date / Number 객체를 문자열로 변환하는 함수
 ```java
@@ -32,6 +35,7 @@ oDateFormat.format(oDate);   // Date → "yyyyMMdd"
 ```java
 oDateFormat.parse("20260203"); // "yyyyMMdd" → Date
 ```
+</br>
 </br>
 
 ```java
