Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -73,37 +73,44 @@ onReadEntitySet: function() {
 " ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
 
   method EMPLOYEESET_GET_ENTITYSET.
-    DATA: lr_memo TYPE /IWBEP/T_COD_SELECT_OPTIONS,
-          lr_role TYPE /IWBEP/T_COD_SELECT_OPTIONS,
-          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS,
-          lr_date TYPE /IWBEP/T_COD_SELECT_OPTIONS.
-
-    IF it_filter_select_options IS INITIAL.
-      SELECT * FROM ztempinfo_b03
-        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
-    ELSE.
-      " 만약 필터 정보가 들어왔다면, 필터 적용
-      LOOP AT it_filter_select_options INTO DATA(ls_filter).
-        CASE ls_filter-property.
-          WHEN 'Memo'.
-            APPEND LINES OF ls_filter-select_options TO lr_memo.
-          WHEN 'Role'.
-            APPEND LINES OF ls_filter-select_options TO lr_role.
-          WHEN 'Projod'.
-            APPEND LINES OF ls_filter-select_options TO lr_projod.
-          WHEN 'Assigndate'.
-            APPEND LINES OF ls_filter-select_options TO lr_date.
-          WHEN OTHERS.
-        ENDCASE.
-      ENDLOOP.
-
-      SELECT * FROM ztempinfo_b03
-        INTO CORRESPONDING FIELDS OF TABLE et_entityset
-        WHERE Memo IN lr_memo
-          AND Role IN lr_role
-          AND projod IN lr_projod
-          AND assigndate IN lr_date.
-    ENDIF.
+    DATA: lv_where_clause TYPE string.
+        " 전체 필터 조건을 SQL WHERE 절 문자열로 변환
+        lv_where_clause = io_tech_request_context->get_osql_where_clause( ).
+        SELECT * FROM ztempinfo_b03
+          INTO CORRESPONDING FIELDS OF TABLE et_entityset
+          WHERE (lv_where_clause).
+*    DATA: lr_memo TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_role TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_date TYPE /IWBEP/T_COD_SELECT_OPTIONS.
+*
+*    IF it_filter_select_options IS INITIAL.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+*    ELSE.
+*      " 만약 필터 정보가 들어왔다면, 필터 적용
+*      LOOP AT it_filter_select_options INTO DATA(ls_filter).
+*        CASE ls_filter-property.
+*          WHEN 'Memo'.
+*            APPEND LINES OF ls_filter-select_options TO lr_memo.
+*          WHEN 'Role'.
+*            APPEND LINES OF ls_filter-select_options TO lr_role.
+*          WHEN 'Projod'.
+*            APPEND LINES OF ls_filter-select_options TO lr_projod.
+*          WHEN 'Assigndate'.
+*            APPEND LINES OF ls_filter-select_options TO lr_date.
+*          WHEN OTHERS.
+*        ENDCASE.
+*      ENDLOOP.
+*
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+*        WHERE Memo IN lr_memo
+*          AND Role IN lr_role
+*          AND projod IN lr_projod
+*          AND assigndate IN lr_date.
+*    ENDIF.
+**********************************************************************
 *    IF iv_filter_string IS INITIAL.
 *      SELECT * FROM ztempinfo_b03
 *        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
