Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -121,3 +121,13 @@ onReadEntitySet: function() {
 *    ENDIF.
   endmethod.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < Create >
+- `?` 가 들어간 파라미터는 옵셔널, 아닌 것은 필수 값
+<img width="592" height="35" alt="image" src="https://github.com/user-attachments/assets/34eb1a57-53c3-4fd0-90d2-92390d1e19a5" />
