Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -131,3 +131,7 @@ onReadEntitySet: function() {
 ## < Create >
 - `?` 가 들어간 파라미터는 옵셔널, 아닌 것은 필수 값
 <img width="592" height="35" alt="image" src="https://github.com/user-attachments/assets/34eb1a57-53c3-4fd0-90d2-92390d1e19a5" />
+
+</br>
+
+- `alt` 로 선택 후에 `Ctrl + shift + 화살표 =>` 누르면 한번에 선택 가능
