Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -13,7 +13,7 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 
 </br>
 
-### 1) Filter 연결
+## < Filter 연결 >
 </br>
 
 - `it_filter_select_options` → OData 필터를 필드별 SELECT-OPTIONS 구조로 파싱해서 전달하는 내부 테이블
@@ -128,7 +128,10 @@ onReadEntitySet: function() {
 
 </br>
 
-## < Create >
+## < sap.ui.model.odata.v2.ODataModel CRUD 메서드 정리 >
+</br>
+
+### 1) Create 
 - `?` 가 들어간 파라미터는 옵셔널, 아닌 것은 필수 값
 <img width="592" height="35" alt="image" src="https://github.com/user-attachments/assets/34eb1a57-53c3-4fd0-90d2-92390d1e19a5" />
 
