Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -19,24 +19,6 @@ this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`
 - `it_filter_select_options` → OData 필터를 필드별 SELECT-OPTIONS 구조로 파싱해서 전달하는 내부 테이블
 - `iv_filter_string` → OData $filter 조건을 문자열 그대로 전달한 WHERE 절용 필터 문자열
 - `WHERE (변수)` 는 문자열을 SQL 조건식으로 해석하는 ABAP의 동적 WHERE 문법
-</br>
-
-- `UTC` → 전 세계 공통으로 사용하는 표준 시간 기준
-- `UTC+9` → 한국에서 사용하는 현지 시간 기준 (UTC보다 9시간 빠름)
-- UTC/UTC+9 혼용 시 날짜·시간 변환 과정에서 하루 밀림(±1일) 오류가 발생할 수 있음
-</br>
-
-- `sap.ui.core.format.DateFormat.getInstance({ pattern: "yyyyMMdd", UTC: true })` → 날짜를 UTC 기준으로 yyyyMMdd 형식 문자열로 변환하는 포맷 객체 생성
-- `format()` → Date / Number 객체를 문자열로 변환하는 함수
-```java
-oDateFormat.format(oDate);   // Date → "yyyyMMdd"
-```
-- `parse()` → 문자열을 Date / Number 객체로 변환하는 함수
-```java
-oDateFormat.parse("20260203"); // "yyyyMMdd" → Date
-```
-</br>
-</br>
 
 ```java
 // project1
@@ -129,6 +111,24 @@ onReadEntitySet: function() {
 </br>
 
 ## < sap.ui.model.odata.v2.ODataModel CRUD 메서드 정리 >
+</br>
+
+### 1) Date
+- `UTC` → 전 세계 공통으로 사용하는 표준 시간 기준
+- `UTC+9` → 한국에서 사용하는 현지 시간 기준 (UTC보다 9시간 빠름)
+- UTC/UTC+9 혼용 시 날짜·시간 변환 과정에서 하루 밀림(±1일) 오류가 발생할 수 있음
+</br>
+
+- `sap.ui.core.format.DateFormat.getInstance({ pattern: "yyyyMMdd", UTC: true })` → 날짜를 UTC 기준으로 yyyyMMdd 형식 문자열로 변환하는 포맷 객체 생성
+- `format()` → Date / Number 객체를 문자열로 변환하는 함수
+```java
+oDateFormat.format(oDate);   // Date → "yyyyMMdd"
+```
+- `parse()` → 문자열을 Date / Number 객체로 변환하는 함수
+```java
+oDateFormat.parse("20260203"); // "yyyyMMdd" → Date
+```
+</br>
 </br>
 
 ### 1) Create 
