Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -121,12 +121,23 @@ onReadEntitySet: function() {
 
 - `sap.ui.core.format.DateFormat.getInstance({ pattern: "yyyyMMdd", UTC: true })` → 날짜를 UTC 기준으로 yyyyMMdd 형식 문자열로 변환하는 포맷 객체 생성
 - `format()` → Date / Number 객체를 문자열로 변환하는 함수
-```java
-oDateFormat.format(oDate);   // Date → "yyyyMMdd"
-```
 - `parse()` → 문자열을 Date / Number 객체로 변환하는 함수
 ```java
-oDateFormat.parse("20260203"); // "yyyyMMdd" → Date
+let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+  pattern: "yyyy-MM-dd",
+  UTC: true
+});
+
+oDateFormat.format(oDate);   // Date → 문자열
+oDateFormat.parse("2026-02-03"); // 문자열 → Date
+```
+- 서버 DateTime → 문자열로 표시
+```html
+<Text text="{
+  path: 'Writedate',
+  type: 'sap.ui.model.odata.type.DateTime',
+  formatOptions: { pattern: 'yyyy-MM-dd' }
+}" />
 ```
 </br>
 </br>
