Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -118,6 +118,7 @@ onReadEntitySet: function() {
 - `UTC+9` → 한국에서 사용하는 현지 시간 기준 (UTC보다 9시간 빠름)
 - UTC/UTC+9 혼용 시 날짜·시간 변환 과정에서 하루 밀림(±1일) 오류가 발생할 수 있음
 </br>
+</br>
 
 - `sap.ui.core.format.DateFormat.getInstance({ pattern: "yyyyMMdd", UTC: true })` → 날짜를 UTC 기준으로 yyyyMMdd 형식 문자열로 변환하는 포맷 객체 생성
 - `format()` → Date / Number 객체를 문자열로 변환하는 함수
@@ -138,6 +139,18 @@ oDateFormat.parse("2026-02-03"); // 문자열 → Date
   type: 'sap.ui.model.odata.type.DateTime',
   formatOptions: { pattern: 'yyyy-MM-dd' }
 }" />
+```
+</br>
+</br>
+
+- DatePicker는 화면 표시용(displayFormat)과 내부 처리용(value/valueFormat, dateValue)을 분리해 날짜 입력·처리를 안정적으로 하는 컨트롤
+```html
+<DatePicker
+    displayFormat="yyyy-MM-dd"   <!-- 화면에 보이는 날짜 형식 -->
+    valueFormat="yyyy-MM-dd"     <!-- 내부에서 문자열로 관리되는 형식 -->
+    value="2026-02-03"            <!-- 문자열(String) 값 바인딩 -->
+    dateValue="{/Writedate}"      <!-- Date 객체(Date) 바인딩 -->
+/>
 ```
 </br>
 </br>
