Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -113,7 +113,7 @@ onReadEntitySet: function() {
 ## < sap.ui.model.odata.v2.ODataModel CRUD 메서드 정리 >
 </br>
 
-### 1) Date
+### 1) UTC 기준 Date 처리 및 DatePicker
 - `UTC` → 전 세계 공통으로 사용하는 표준 시간 기준
 - `UTC+9` → 한국에서 사용하는 현지 시간 기준 (UTC보다 9시간 빠름)
 - UTC/UTC+9 혼용 시 날짜·시간 변환 과정에서 하루 밀림(±1일) 오류가 발생할 수 있음
