Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -133,6 +133,7 @@ oDateFormat.format(oDate);   // Date → 문자열
 oDateFormat.parse("2026-02-03"); // 문자열 → Date
 ```
 - 서버 DateTime → 문자열로 표시
+- JS Date → `sap.ui.model.type.Date`, OData DateTime 문자열 → `sap.ui.model.odata.type.DateTime`, formatter는 선택
 ```html
 <Text text="{
   path: 'Writedate',
