Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -4,7 +4,7 @@
 this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, ...)
 ```
 
-- **2) `sap.ui.table.Table` 정리**
+- **2) ODataModel은 `getData()` / `getDate()` 같은 직접 접근 불가이고, 데이터는 `read()` 콜백이나 바인딩된 컨텍스트(`getBindingContext().getProperty()`)로만 가져올 수 있음**
 
 </br>
 </br>
