Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -1,10 +1,6 @@
 ## <  핵심 개념 >
-- **1) `read()` 로 `GET_ENTITY` 호출 시, 문자 타입 키는 반드시 ' '로 감싸야 함**
-```java
-this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, ...)
-```
-
-- **2) ODataModel은 `getData()` / `getDate()` 같은 직접 접근 불가이고, 데이터는 `read()` 콜백이나 바인딩된 컨텍스트(`getBindingContext().getProperty()`)로만 가져올 수 있음**
+- **1) ODataModel은 `getData()` / `getDate()` 같은 직접 접근 불가이고, 데이터는 `read()` 콜백이나 바인딩된 컨텍스트(`getBindingContext().getProperty()`)로만 가져올 수 있음**
+- **2) `content aggregation` 은 하나만 가능해서 여러 컨트롤 쓰려면 `VBox` 같은 컨테이너로 감싸야 함**
 
 </br>
 </br>
