--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -154,13 +154,223 @@ oDateFormat.parse("2026-02-03"); // 문자열 → Date
 </br>
 </br>
 
-### 1) Create 
+### 1) Read
+- OData Model이 `read()` 를 호출하면 키 유무에 따라 `GET_ENTITY` 또는 `GET_ENTITYSET` 이 실행되어 DB 데이터를 조회함
+- BAS 코드
+```java
+// test1
+onReadEntitySet: function() {
+    // this._oPersonModel => oData V2 Model
+    let oModel = this.getView().getModel("view");
+
+    this._oPersonModel.read("/PersonSet('9001')", {
+        success: function(oReturn) {
+            // Request 요청이 성공하면, succcess 함수가 실행됨
+            // console.log("Read EntitySet 성공!", oReturn);
+            // oModel.setProperty("/salary", oReturn.results[0].Memo);
+            oModel.setProperty("/name/FirstName", oReturn.Firstname);
+            oModel.setProperty("/name/LastName", oReturn.Lastname);
+        }.bind(this),
+        error: function(oError) {
+            console.log("Read EntitySet 에러!", oError);
+        }
+    })
+},
+```
+- SAP GUI 코드
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_GET_ENTITY
+  method PERSONSET_GET_ENTITY.
+    DATA: ls_data   TYPE zcl2person. "DB Tab 구조
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name.
+        WHEN 'Perno'.
+          ls_data-perno = ls_key-value.
+      ENDCASE.
+    ENDLOOP.
+
+    SELECT SINGLE *
+      FROM zcl2person
+      INTO @DATA(ls_result)
+      WHERE perno = @ls_data-perno.
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_result TO er_entity.
+    ENDIF.
+
+  endmethod.
+```
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_GET_ENTITYSET
+  method PERSONSET_GET_ENTITYSET.
+    SELECT * FROM ZCL2PERSON
+      INTO TABLE ET_ENTITYSET.
+  endmethod.
+```
+
+
+### 2) Create 
 - `?` 가 들어간 파라미터는 옵셔널, 아닌 것은 필수 값
 <img width="592" height="35" alt="image" src="https://github.com/user-attachments/assets/34eb1a57-53c3-4fd0-90d2-92390d1e19a5" />
 
 </br>
 
 - `alt` 로 선택 후에 `Ctrl + shift + 화살표 =>` 누르면 한번에 선택 가능
+</br>
+</br>
+
+- 화면에서 전달한 Body 데이터를 OData가 받아 `CREATE_ENTITY` 에서 DB에 신규 데이터를 INSERT함
+- BAS 코드
+```java
+// test1
+onCreate: function() {
+    let oDataModel = this.getView().getModel("view");
+    let oData = oDataModel.getData();
+    let oBody = {
+        Perno       : oData.Perno,
+        Firstname   : oData.Firstname,
+        Lastname    : oData.Lastname,
+        Memo        : oData.Memo
+    }
+    debugger;
+    this._oPersonModel.create("/PersonSet", oBody, {
+        success: function() {
+            sap.m.MessageToast.show("성공!");
+        },
+        error: function(error) {
+            console.log("Create EntitySet 에러!", error);
+        }
+    })
+},
+```
+- SAP GUI 코드
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_CREATE_ENTITY
+  method PERSONSET_CREATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
+          ls_data   TYPE zcl2person.
+
+    io_data_provider->read_entry_data(
+      IMPORTING es_data = ls_entity
+    ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+
+    INSERT zcl2person FROM ls_data.
+
+    IF sy-subrc = 0.
+      MOVE ls_entity TO er_entity.
+    ENDIF.
+  endmethod.
+```
+</br>
+</br>
+
+### 3) Update
+- 키 기반 Path로 `update()` 를 호출하면 UPDATE_ENTITY에서 해당 키의 DB 데이터를 수정함
+- BAS 코드
+```java
+// test1
+onUpdate: function() {
+    // 여기서 사용자 입력값에 따라 oDataModel update 로직 수행
+    // 우선 사용자 입력값이 들어있는 view 모델을 가져옴
+    let oModel = this.getView().getModel("view");
+    let oData = oModel.getData();
+
+    let sPath = this._oPersonModel.createKey("/PersonSet", {
+        Perno : oData.Perno
+    }) // 경로를 만들어줌. 예시: "/PersonSet('1000')"
+
+    let oBody = {
+        Perno       : oData.Perno,
+        Firstname   : oData.Firstname,
+        Lastname    : oData.Lastname,
+        Memo        : oData.Memo
+    }
+    debugger;
+    this._oPersonModel.update(sPath, oBody, {
+        success: function(oReturn) {
+            sap.m.MessageToast.show(oReturn);
+        },
+        error: function() {
+            sap.m.MessageToast.show("수정 에러 발생!");
+        }
+    });
+},
+```
+- SAP GUI 코드
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_UPDATE_ENTITY
+  method PERSONSET_UPDATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
+          ls_data   TYPE zcl2person.
+
+    io_data_provider->read_entry_data(
+      IMPORTING es_data = ls_entity
+    ).
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_entity TO ls_data.
+      UPDATE zcl2person FROM ls_data.
+    ENDIF.
+  endmethod.
+```
+</br>
+</br>
+
+### 4) Refresh
+- refresh()는 서버를 다시 호출하여 `GET_ENTITYSET` 을 재실행해 최신 데이터를 다시 가져옴
+- BAS 코드
+```java
+// test1
+onRefresh: function() {
+    this._oPersonModel.refresh();
+}
+```
+
+</br>
+</br>
+
+### 5) Delete
+- 키 기반 Path로 `remove()` 를 호출하면 DELETE_ENTITY에서 해당 키의 DB 데이터를 삭제함
+- BAS 코드
+```java
+// test1
+onDelete: function() {
+    let oModel = this.getView().getModel("view");
+    let oData = oModel.getData();
+
+    let sPath = this._oPersonModel.createKey("/PersonSet", {
+        Perno : oData.Perno
+    }) // 경로를 만들어줌. 예시: "/PersonSet('1000')"
+
+    this._oPersonModel.remove(sPath, {
+        success: function() {
+            sap.m.MessageToast.show("삭제 완료!");
+        },
+        error: function() {
+            sap.m.MessageToast.show("삭제 에러!");
+        }
+    })
+}
+```
+- SAP GUI 코드
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_DELETE_ENTITY
+  method PERSONSET_DELETE_ENTITY.
+    DATA: ls_data   TYPE zcl2person.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name.
+        WHEN 'Perno'.
+          ls_data-perno = ls_key-value.
+      ENDCASE.
+    ENDLOOP.
+
+    DELETE zcl2person FROM ls_data.
+  endmethod.
+```
 </br>
 </br>
 
