Update 1-5. 프로그래밍 코드 최적화(02.05).md

--- a/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
+++ b/RAP/1-5. 프로그래밍 코드 최적화(02.05).md
@@ -379,7 +379,7 @@ sap.ui.define([
 ## < 실습 코드 >
 </br>
 
-### 실습 1
+### 실습 1 : m.table / ui.table 행 선택 기반 단건 조회 실습
 - 테이블 중 한 행 선택하면 해당 행 정보 띄우기
 - m.table ui.table 실습
 
