--- a/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
+++ b/RAP/1-4. 프로그래밍 코드 최적화(02.04).md
@@ -83,7 +83,7 @@ https://port8080-workspaces-ws-vefo7.us10.trial.applicationstudio.cloud.sap/sap/
 ## < 실습 코드 >
 </br>
 
-### 실습 1
+### 실습 1: Aggregation Binding을 이용한 리스트 데이터 바인딩 실습
 - `\` 붙이면 그대로 출력
 - Aggregation Binding 실습
   
@@ -227,7 +227,7 @@ sap.ui.define([
 </br>
 </br>
 
-### 실습 2
+### 실습 2: OData 모델 추가 후 EntitySet 바인딩 실습
 - oData 추가해서 바인딩 실습
 - `items="{ZCODE_PERSON2_SRV>/PersonSet}"` 처럼 바인딩할 때 `/PersonSet` 은 반드시 `EntitySet` 으로 지정
 - 실습 1 코드에서 `view.xml` 파일만 수정
@@ -348,7 +348,7 @@ sap.ui.define([
 </br>
 </br>
 
-### 실습 3
+### 실습 3: getProperty / getData를 이용한 모델 데이터 조회 실습
 - `getProperty` 와 `getData` 이용 실습
 - 버튼 클릭시 입력한 값이 출력
 - 실습 1 코드에서 `controller.js` 파일만 수정
@@ -422,7 +422,7 @@ onPress: function () {
 </br>
 </br>
 
-### 실습 4
+### 실습 4: Table 행 선택 시 BindingContext로 데이터 조회 실습
 - Table row 클릭시 해당 row의 데이터 가져오기 실습
 - getBinding 이용
   
