--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -438,4 +438,236 @@ onDelete: function() {
 *    ENDIF.
   endmethod.
 ```
-- Main.controller.js
+</br>
+
+**2) Main.controller.js**
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter", 
+    "sap/ui/model/FilterOperator"
+], (Controller, Filter, FilterOperator) => {
+    "use strict";
+
+    return Controller.extend("project1.controller.Main", {
+        onInit() {
+            this.oModel = this.getOwnerComponent().getModel();
+        },
+        onPress: function() {
+            let oTable = this.getView().byId("idEmployee");
+            let oItem = oTable.getSelectedItem();
+            let oData = oItem.getBindingContext().getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "m.table 버튼 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onSelectionChange: function(oEvent) {
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            let oData = this.oModel.getProperty(sPath);
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "m.table 행 클릭 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onReadEntitySet: function() {
+            // new Filter(path, operator, value1, value2(operator가 BT 인 경우에 씀))
+            
+            // let aFilter = []
+            // let oFilter = new Filter("Memo", FilterOperator.Contains, "TEST2 MEMO");
+            // aFilter.push(oFilter);
+            let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+                pattern: "yyyyMMdd",
+                UTC: true
+            });
+            let oStartDate = oDateFormat.parse("20260119");
+            let oEndDate = oDateFormat.parse("20260701");
+
+            let oFilter = [];
+            oFilter.push(new Filter("Memo", FilterOperator.Contains, "TEST2 MEMO"));
+            // oFilter.push(new Filter("Role", FilterOperator.Contains, "TEST2"));
+            // oFilter.push(new Filter("Projod", FilterOperator.NE, "TEST2")); // 5000번 데이터 띄우기
+            oFilter.push(new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate));
+
+            this.oModel.read("/EmployeeSet", {
+                filters: oFilter, //aFilters,
+                success: function(oReturn) {
+                    sap.m.MessageToast.show("조회 완료, 콘솔창 확인!");
+                    console.log("onReadEntitySet 전체 조회 성공 : ", oReturn.results);
+                }
+            })
+        },
+        onPress2: function() {
+            let oTable = this.byId("idEmployee2");
+            let oIndex = oTable.getSelectedIndex();
+
+            if (oIndex < 0) return sap.m.MessageToast.show("데이터를 선택하세요.");
+
+            let oData = oTable.getContextByIndex(oIndex).getObject();
+            let sPath = `/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`;
+            // 위와 같이 전체 데이터를 가져와서, sPath 를 구성할 수도 있고,
+            // this.byId("idTable").getContextByIndex(iSelectNo).getPath() 를 사용해서
+            // 해당 Row의 바인딩 경로 문자열 전체를 얻을 수도 있음 
+            this.oModel.read(sPath, {
+                success: function(oReturn) {
+                    sap.m.MessageToast.show("ui.table 버튼으로 1건 조회", oReturn);
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onRowSelect: function(oEvent) {
+            let oRowIndex = oEvent.getParameter("rowIndex");
+            let oContext = oEvent.getParameter("rowContext");
+            let oData = oContext.getObject();
+            this.oModel.read(`/EmployeeSet(Empno='${oData.Empno}',Projod='${oData.Projod}')`, {
+                success: function(oReturn) {
+                    sap.m.MessageBox.information(
+                        `Empno:  ${oReturn.Empno}
+                        Memo:  ${oReturn.Memo} 
+                        Projod:  ${oReturn.Projod} 
+                        Role:  ${oReturn.Role} `,
+                        { title: "ui.table 행 클릭 조회" }
+                    );
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        }
+    });
+});
+```
+</br>
+
+**3) Main.view.xml**
+```html
+<mvc:View controllerName="project1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <VBox >
+            <Table id="idEmployee"
+                class="sapUiSmallMarginBottom"
+                inset="false"
+                mode="SingleSelectLeft"
+                selectionChange="onSelectionChange"
+                items="{/EmployeeSet}">
+                <headerToolbar>
+                    <OverflowToolbar>
+                        <content>
+                            <Title text="Employee" level="H2"/>
+                            <ToolbarSpacer />
+                            <Button text="클릭" press="onPress"/>
+                        </content>
+                    </OverflowToolbar>
+                </headerToolbar>
+                <infoToolbar>
+                    <OverflowToolbar>
+                        <Label text="Employee"/>
+                    </OverflowToolbar>
+                </infoToolbar>
+                <columns>
+                    <Column><Text text="EMPNO" /></Column>
+                    <Column><Text text="PROJOD" /></Column>
+                    <Column><Text text="ASSIGNDATE" /></Column>
+                    <Column><Text text="ROLE" /></Column>
+                    <Column><Text text="MEMO" /></Column>
+                </columns>
+                <items>
+                    <ColumnListItem vAlign="Middle">
+                        <cells>
+                            <Text text="{Empno}" />
+                            <Text text="{Projod}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{Role}" />
+                            <Text text="{Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+
+            <t:Table rows="{/EmployeeSet}"
+                    id="idEmployee2"
+                    selectionMode="Single"
+                    selectionBehavior="RowOnly"
+                    rowSelectionChange="onRowSelect">
+                <t:extension>
+                    <OverflowToolbar>
+                        <Title text="Employee" level="H2"/>
+                        <ToolbarSpacer />
+                        <Button text="EntitySet" press="onReadEntitySet"/>
+                        <Button text="클릭" press="onPress2"/>
+                    </OverflowToolbar>
+                </t:extension>
+                <t:columns>
+                    <t:Column>
+                        <Label text="EMPNO" />
+                        <t:template>
+                            <Text text="{Empno}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="PROJOD" />
+                        <t:template>
+                            <Text text="{Projod}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="ASSIGNDATE" />
+                        <t:template>
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="ROLE" />
+                        <t:template>
+                            <Text text="{Role}" />
+                        </t:template>
+                    </t:Column>
+
+                    <t:Column>
+                        <Label text="MEMO" />
+                        <t:template>
+                            <Text text="{Memo}" />
+                        </t:template>
+                    </t:Column>
+                </t:columns>
+            </t:Table>
+        </VBox>
+    </Page>
+</mvc:View>
+```
