--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -384,6 +384,8 @@ onDelete: function() {
 
 ### 실습 1
 - 필터 사용
+<img width="479" height="225" alt="image" src="https://github.com/user-attachments/assets/bab22fd4-a7f7-4969-af9f-8d4e1acec651" />
+
 </br>
 
 **1) SAP GUI 코드**
