--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -674,3 +674,366 @@ sap.ui.define([
     </Page>
 </mvc:View>
 ```
+</br>
+</br>
+</br>
+
+### 실습 2
+- CRUD 프로그램 실습
+<img width="616" height="281" alt="image" src="https://github.com/user-attachments/assets/34703b4a-e106-415d-b024-21c6cd81a825" />
+</br>
+</br>
+
+**1) SAP GUI 코드**
+- GET_ENTITYSET
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_GET_ENTITYSET
+  method PERSONSET_GET_ENTITYSET.
+    SELECT * FROM ZCL2PERSON
+      INTO TABLE ET_ENTITYSET.
+  endmethod.
+```
+- GET_ENTITY
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_GET_ENTITY
+  method PERSONSET_GET_ENTITY.
+    DATA: ls_data   TYPE zcl2person. "DB Tab 구조
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name.
+        WHEN 'Perno'.
+          ls_data-perno = ls_key-value.
+      ENDCASE.
+    ENDLOOP.
+
+    SELECT SINGLE *
+      FROM zcl2person
+      INTO @DATA(ls_result)
+      WHERE perno = @ls_data-perno.
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_result TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- CREATE_ENTITY
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_CREATE_ENTITY
+  method PERSONSET_CREATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
+          ls_data   TYPE zcl2person.
+
+    io_data_provider->read_entry_data(
+      IMPORTING es_data = ls_entity
+    ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+
+    INSERT zcl2person FROM ls_data.
+
+    IF sy-subrc = 0.
+      MOVE ls_entity TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- UPDATE_ENTITY
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_UPDATE_ENTITY
+  method PERSONSET_UPDATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
+          ls_data   TYPE zcl2person.
+
+    io_data_provider->read_entry_data(
+      IMPORTING es_data = ls_entity
+    ).
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_entity TO ls_data.
+      UPDATE zcl2person FROM ls_data.
+    ENDIF.
+  endmethod.
+```
+- DELETE_ENTITY
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_DELETE_ENTITY
+  method PERSONSET_DELETE_ENTITY.
+    DATA: ls_data   TYPE zcl2person.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name.
+        WHEN 'Perno'.
+          ls_data-perno = ls_key-value.
+      ENDCASE.
+    ENDLOOP.
+
+    DELETE zcl2person FROM ls_data.
+  endmethod.
+```
+</br>
+
+**2) Main.controller.js**
+```java
+// test1
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"   // 사용할 라이브러리 추가
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("test1.controller.Main", {
+        onInit() {
+            this._oPersonModel = this.getOwnerComponent().getModel("ZCODE_PERSON2_SRV");
+
+            let oModel = this.getOwnerComponent().getModel(); // 기본 (빈문자열) 모델을 가져옴
+            let oMainModel = this.getOwnerComponent().getModel("main"); // main 모델을 가져옴
+
+            // 해당 라인에서 디버깅이 실행됨. 단, 개발자도구가 켜져있는 상태여야 함
+            // debugger; 
+
+            let oData = {
+                name : { 
+                    FirstName : "홍", 
+                    LastName : "길동"
+                 },
+                age : 30,
+                salary : "4000만원",
+                list : [
+                    { ProductNo : "P001", ProdectName : "책상", price : 10000 },
+                    { ProductNo : "P002", ProdectName : "키보드", price : 5000 },
+                    { ProductNo : "P003", ProdectName : "물티슈", price : 1000 },
+                    { ProductNo : "P004", ProdectName : "의자", price :30000 }
+                ],
+                Combo : [
+                    { text : "Block", key : "Block" },
+                    { text : "Grid Large", key : "GridLarge" },
+                    { text : "Grid Small", key : "GridSmall" }
+                ]
+            };
+            let oJSONModel = new JSONModel(oData);
+            // 모델 이름 생략 시 빈 문자열
+            // 기존에 기본모델이 존재한다면 해당 모델을 덮어씀
+            // 따라서 모델 이름을 부여해서 각 모델을 구분할 수 있도록 함
+            // this.getView().setModel(모델객체, 모델이름); 
+            this.getView().setModel(oJSONModel, "view"); 
+
+            // 모델에 들어있는 데이터를 화면에 표시하기 위해서
+            // "바인딩(Binding)" 이라는 것을 사용
+            // 기본 문법
+            // <tag name="{모델이름>/경로}" />  모델 이름이 있는 경우
+            // <tag name="{/경로}" />           모델 이름이 없는 경우(기본)
+            // 경로는 JSON 객체의 key 값으로 접근
+            // => {모델이름>/key1/key2} 와 같이 하위로 내려갈 수 있음
+        },
+        onPress: function () {
+            let oModel = this.getView().getModel("view");
+            let oData = oModel.getProperty("/");            // oModel.getData();
+            sap.m.MessageBox.information(
+                `이름:  ${oData.name.FirstName}${oData.name.LastName} 
+                나이:  ${oData.age} 
+                연봉:  ${oData.salary}`
+            );
+        },
+        onSelectionChange: function(oEvent) {
+            let oModel = this.getView().getModel();
+            let sPath = oEvent.getParameters().listItem.getBindingContext().getPath();
+            let oData = oModel.getProperty(sPath);
+            sap.m.MessageBox.information(
+                `Carrid:  ${oData.Carrid} 
+                Carrname:  ${oData.Carrname} 
+                Currcode:  ${oData.Currcode}
+                Url:  ${oData.Url}`
+            );
+        },
+        onReadEntitySet: function() {
+            // this._oPersonModel => oData V2 Model
+            let oModel = this.getView().getModel("view");
+    
+            this._oPersonModel.read("/PersonSet('9001')", {
+                success: function(oReturn) {
+                    // Request 요청이 성공하면, succcess 함수가 실행됨
+                    // console.log("Read EntitySet 성공!", oReturn);
+                    // oModel.setProperty("/salary", oReturn.results[0].Memo);
+                    oModel.setProperty("/name/FirstName", oReturn.Firstname);
+                    oModel.setProperty("/name/LastName", oReturn.Lastname);
+                }.bind(this),
+                error: function(oError) {
+                    console.log("Read EntitySet 에러!", oError);
+                }
+            })
+        },
+        onCreate: function() {
+            let oDataModel = this.getView().getModel("view");
+            let oData = oDataModel.getData();
+            let oBody = {
+                Perno       : oData.Perno,
+                Firstname   : oData.Firstname,
+                Lastname    : oData.Lastname,
+                Memo        : oData.Memo
+            }
+            debugger;
+            this._oPersonModel.create("/PersonSet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("성공!");
+                },
+                error: function(error) {
+                    console.log("Create EntitySet 에러!", error);
+                }
+            })
+        },
+        onSelectionChangePerson: function(oEvent) {
+            let oModel = this.getView().getModel("view");   // JSONModel (이름: view) 호출
+            let oParam = oEvent.getParameters();    // oEvent 객체의 파라미터들 가져오기
+            if(oParam.selected) {   // 만약 row가 선택됐다면
+                // 해당 Row의 바인딩 정보를 가져옴 (바인딩된 모델중, ZCODE_PERSON2_SRV 모델에 대해)
+                let oData = oParam.listItem.getBindingContext("ZCODE_PERSON2_SRV").getObject();
+                // view 모델에 내가 선택한 데이터를 적용
+                oModel.setData(oData, true); // JSONModel (이름: view)의 필드명이 동일해서 가능한 것
+            }
+        },
+        onUpdate: function() {
+            // 여기서 사용자 입력값에 따라 oDataModel update 로직 수행
+            // 우선 사용자 입력값이 들어있는 view 모델을 가져옴
+            let oModel = this.getView().getModel("view");
+            let oData = oModel.getData();
+
+            let sPath = this._oPersonModel.createKey("/PersonSet", {
+                Perno : oData.Perno
+            }) // 경로를 만들어줌. 예시: "/PersonSet('1000')"
+
+            let oBody = {
+                Perno       : oData.Perno,
+                Firstname   : oData.Firstname,
+                Lastname    : oData.Lastname,
+                Memo        : oData.Memo
+            }
+            debugger;
+            this._oPersonModel.update(sPath, oBody, {
+                success: function(oReturn) {
+                    sap.m.MessageToast.show(oReturn);
+                },
+                error: function() {
+                    sap.m.MessageToast.show("수정 에러 발생!");
+                }
+            });
+        },
+        onRefresh: function() {
+            this._oPersonModel.refresh();
+        },
+        onDelete: function() {
+            let oModel = this.getView().getModel("view");
+            let oData = oModel.getData();
+
+            let sPath = this._oPersonModel.createKey("/PersonSet", {
+                Perno : oData.Perno
+            }) // 경로를 만들어줌. 예시: "/PersonSet('1000')"
+
+            this._oPersonModel.remove(sPath, {
+                success: function() {
+                    sap.m.MessageToast.show("삭제 완료!");
+                },
+                error: function() {
+                    sap.m.MessageToast.show("삭제 에러!");
+                }
+            })
+        }
+    });
+});
+```
+</br>
+
+**3) Main.view.xml**
+```html
+// test1
+<mvc:View controllerName="test1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:core="sap.ui.core"
+    xmlns:l = "sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <l:Grid containerQuery="true" 
+                class="sapUiSmallMargin"
+                defaultSpan="XL3 L4 M4 S12">
+                <Input value="{view>/Perno}" description="Person No."/>
+                <Input value="{view>/Firstname}" description="First Name"/>
+                <Input value="{view>/Lastname}" description="Last Name"/>
+                <Input value="{view>/Memo}" description="Memo"/>
+        </l:Grid>
+
+        <!-- sap.m.table 추가 -->
+        <Table id="idPersonTable"
+            inset="false"
+            mode="SingleSelectMaster"
+            selectionChange="onSelectionChangePerson"
+            items="{ZCODE_PERSON2_SRV>/PersonSet}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Person" level="H2"/>
+                        <Button text="EntitySet" press="onReadEntitySet" />
+                        <Button text="Create" press="onCreate" />
+                        <Button text="Update" press="onUpdate" />
+                        <Button text="Delete" press="onDelete" />
+                        <Button icon="sap-icon://refresh" press="onRefresh" />
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Person"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="Perno" /></Column>
+                <Column><Text text="Name" /></Column>
+                <Column><Text text="Memo" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{ZCODE_PERSON2_SRV>Perno}" />
+                        <ObjectIdentifier title="{ZCODE_PERSON2_SRV>Firstname}" text="{ZCODE_PERSON2_SRV>Lastname}"/>
+                        <Text text="{ZCODE_PERSON2_SRV>Memo}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+
+        <Table id="idProductsTable"
+            inset="false"
+            mode="SingleSelectLeft"
+            selectionChange="onSelectionChange"
+            items="{/Carriers}">
+            <headerToolbar>
+                <OverflowToolbar>
+                    <content>
+                        <Title text="Products" level="H2"/>
+                        <ToolbarSpacer />
+                        <Button text="버튼" press="onPress" />
+                    </content>
+                </OverflowToolbar>
+            </headerToolbar>
+            <infoToolbar>
+                <OverflowToolbar>
+                    <Label text="Wide range of available products"/>
+                </OverflowToolbar>
+            </infoToolbar>
+            <columns>
+                <Column><Text text="Carrid" /></Column>
+                <Column><Text text="Carrname" /></Column>
+                <Column><Text text="Currcode" /></Column>
+                <Column><Text text="Url" /></Column>
+            </columns>
+            <items>
+                <ColumnListItem vAlign="Middle">
+                    <cells>
+                        <Text text="{Carrid}" />
+                        <Text text="{Carrname}" />
+                        <Text text="{Currcode}" />
+                        <Text text="{Url}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
