Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -382,7 +382,7 @@ onDelete: function() {
 ## < 실습 코드 >
 </br>
 
-### 실습 1
+### 실습 1 : OData Filter를 이용한 EntitySet 조회 실습
 - 필터 사용
 <img width="599" height="281" alt="image" src="https://github.com/user-attachments/assets/bbf57f49-9fde-4002-ae11-17dfa2646b23" />
 
@@ -678,7 +678,7 @@ sap.ui.define([
 </br>
 </br>
 
-### 실습 2
+### 실습 2 : 테이블 선택 기반 CRUD 처리 실습
 - CRUD 프로그램 실습
 <img width="616" height="281" alt="image" src="https://github.com/user-attachments/assets/34703b4a-e106-415d-b024-21c6cd81a825" />
 </br>
