Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -1,1 +1,15 @@
+## <  핵심 개념 >
+- **1) ODataModel은 `getData()` / `getDate()` 같은 직접 접근 불가이고, 데이터는 `read()` 콜백이나 바인딩된 컨텍스트(`getBindingContext().getProperty()`)로만 가져올 수 있음**
+- **2) `read()` 는 ODataModel만 가능, JSONModel은 `setData/getData` 로 직접 다룸**
+- **3) `content aggregation` 은 하나만 가능해서 여러 컨트롤 쓰려면 `VBox` 같은 컨테이너로 감싸야 함**
+- **4) `GET_ENTITY` / `GET_ENTITYSET` 은 read 호출할 때만 의미 있음**
 
+</br>
+</br>
+
+---
+
+</br>
+
+## < Filter 연결 >
+</br>
