Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -3,6 +3,8 @@
 - **2) `read()` 는 ODataModel만 가능, JSONModel은 `setData/getData` 로 직접 다룸**
 - **3) `content aggregation` 은 하나만 가능해서 여러 컨트롤 쓰려면 `VBox` 같은 컨테이너로 감싸야 함**
 - **4) `GET_ENTITY` / `GET_ENTITYSET` 은 read 호출할 때만 의미 있음**
+- **5) oData FIlter 연결**
+- **6) oData CRUD 구현**
 
 </br>
 </br>
