--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -11,5 +11,8 @@
 
 </br>
 
-## < Filter 연결 >
+## < 추가적인 내용 >
 </br>
+
+- 외부(OData) 호출로 실행되는 DPC_EXT 메소드 디버깅을 위해 External Breakpoint 설정
+<img width="458" height="283" alt="image" src="https://github.com/user-attachments/assets/b3c10753-c64e-4a85-8e72-b3a8fc7d332b" />
