Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -15,4 +15,9 @@
 </br>
 
 - 외부(OData) 호출로 실행되는 DPC_EXT 메소드 디버깅을 위해 External Breakpoint 설정
-<img width="458" height="283" alt="image" src="https://github.com/user-attachments/assets/b3c10753-c64e-4a85-8e72-b3a8fc7d332b" />
+- 오른쪽 마우스 클릭으로 설정 가능
+<img width="523" height="323" alt="image" src="https://github.com/user-attachments/assets/26704ad0-f422-4243-8533-f5264f80e8d7" />
+</br>
+</br>
+
+<img width="752" height="404" alt="image" src="https://github.com/user-attachments/assets/7fe1ff26-aaf6-4bc6-a118-8e7a29b51ed8" />
