Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -19,5 +19,7 @@
 <img width="523" height="323" alt="image" src="https://github.com/user-attachments/assets/26704ad0-f422-4243-8533-f5264f80e8d7" />
 </br>
 </br>
+</br>
 
+- `GET`: FilterOperator.EQ 조건으로 특정 필드 값이 정확히 일치하는 데이터만 조회하는 OData 필터 조건
 <img width="752" height="404" alt="image" src="https://github.com/user-attachments/assets/7fe1ff26-aaf6-4bc6-a118-8e7a29b51ed8" />
