--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -23,3 +23,9 @@
 
 - `GET`: FilterOperator.EQ 조건으로 특정 필드 값이 정확히 일치하는 데이터만 조회하는 OData 필터 조건
 <img width="752" height="404" alt="image" src="https://github.com/user-attachments/assets/7fe1ff26-aaf6-4bc6-a118-8e7a29b51ed8" />
+</br>
+</br>
+</br>
+
+- `sap.ui.model.odata.v2.ODataModel` 로 검색하면 OData CRUD(Create/Read/Update/Delete) 메소드들을 한 번에 확인할 수 있음
+<img width="614" height="347" alt="image" src="https://github.com/user-attachments/assets/ce95e16e-be58-4fc0-b8e5-290b2d333fbe" />
