Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -29,3 +29,8 @@
 
 - `sap.ui.model.odata.v2.ODataModel` 로 검색하면 OData CRUD(Create/Read/Update/Delete) 메소드들을 한 번에 확인할 수 있음
 <img width="614" height="347" alt="image" src="https://github.com/user-attachments/assets/ce95e16e-be58-4fc0-b8e5-290b2d333fbe" />
+</br>
+</br>
+</br>
+
+## < sap.ui.model.odata.v2.ODataModel CRUD 메서드 정리 >
