Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -38,3 +38,34 @@
 </br>
 
 ## < sap.ui.model.odata.v2.ODataModel CRUD 메서드 정리 >
+</br>
+
+### 1) Create
+- `ZCL_ZCODE_PERSON2_MPC=>TS_PERSON` : 화면에서 보내는 Person 데이터 구조
+- `io_data_provider->read_entry_data` : 화면 입력값을 ABAP 변수로 읽어옴
+- `er_entity` : 저장 결과를 화면으로 다시 전달
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_CREATE_ENTITY
+  method PERSONSET_CREATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
+          ls_data   TYPE zcl2person.
+
+    io_data_provider->read_entry_data(
+      IMPORTING es_data = ls_entity
+    ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+
+    INSERT zcl2person FROM ls_data.
+
+    IF sy-subrc = 0.
+      MOVE ls_entity TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- SAP Gateway Client에서 POST(Create) 요청으로 JSON 데이터를 보내고, DB에 저장된 결과가 OData 응답으로 그대로 반환되는 화면
+  
+<img width="632" height="366" alt="image" src="https://github.com/user-attachments/assets/cf01e657-90d9-49c0-a80f-11526fff16d4" />
+</br>
+</br>
+</br>
