Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -1,8 +1,5 @@
 ## <  핵심 개념 >
-- **1) ODataModel은 `getData()` / `getDate()` 같은 직접 접근 불가이고, 데이터는 `read()` 콜백이나 바인딩된 컨텍스트(`getBindingContext().getProperty()`)로만 가져올 수 있음**
-- **2) `read()` 는 ODataModel만 가능, JSONModel은 `setData/getData` 로 직접 다룸**
-- **3) `content aggregation` 은 하나만 가능해서 여러 컨트롤 쓰려면 `VBox` 같은 컨테이너로 감싸야 함**
-- **4) `GET_ENTITY` / `GET_ENTITYSET` 은 read 호출할 때만 의미 있음**
+- **1) 조회(GET)는 HTTP 가능, 데이터 변경(Create/Update/Delete)은 HTTPS 필수**
 
 </br>
 </br>
@@ -64,7 +61,7 @@
   endmethod.
 ```
 - SAP Gateway Client에서 POST(Create) 요청으로 JSON 데이터를 보내고, DB에 저장된 결과가 OData 응답으로 그대로 반환되는 화면
-  
+- 조회(GET)는 HTTP 가능, 데이터 변경(Create/Update/Delete)은 HTTPS 필수
 <img width="632" height="366" alt="image" src="https://github.com/user-attachments/assets/cf01e657-90d9-49c0-a80f-11526fff16d4" />
 </br>
 </br>
