Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="739" height="300" alt="image" src="https://github.com/user-attachments/assets/7ef711f8-4705-4784-812c-a60e2e73db96" />## <  핵심 개념 >
 - **1) ODataModel은 `getData()` / `getDate()` 같은 직접 접근 불가이고, 데이터는 `read()` 콜백이나 바인딩된 컨텍스트(`getBindingContext().getProperty()`)로만 가져올 수 있음**
 - **2) `read()` 는 ODataModel만 가능, JSONModel은 `setData/getData` 로 직접 다룸**
 - **3) `content aggregation` 은 하나만 가능해서 여러 컨트롤 쓰려면 `VBox` 같은 컨테이너로 감싸야 함**
@@ -1038,4 +1038,258 @@ sap.ui.define([
         </Table>
     </Page>
 </mvc:View>
+```
+
+</br>
+</br>
+</br>
+
+### 과제 1
+- CRUD 프로그램 실습
+<img width="739" height="300" alt="image" src="https://github.com/user-attachments/assets/b8cf4b20-472f-4401-8d48-e3133c543ddd" />
+
+</br>
+</br>
+
+**1) SAP GUI 코드**
+- UPDATE_ENTITY
+```abap
+" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_UPDATE_ENTITY
+  method PERSONSET_UPDATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
+          ls_data   TYPE zcl2person.
+
+    io_data_provider->read_entry_data(
+      IMPORTING es_data = ls_entity
+    ).
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_entity TO ls_data.
+      UPDATE zcl2person FROM ls_data.
+    ENDIF.
+  endmethod.
+```
+
+</br>
+
+**2) Main.controller.js**
+```java
+// assignment1
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+     "sap/ui/model/json/JSONModel",
+     "sap/ui/core/Fragment"
+], (Controller, Filter, FilterOperator, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("assignment1.controller.Main", {
+        onInit() {
+            this.oInputModel = new JSONModel();     
+            this.getView().setModel(this.oInputModel, "oInputModel");   
+            this.oDataModel = this.getOwnerComponent().getModel();  
+        },
+        onSearch: function() {
+            let oInput = this.oInputModel.getData();    // 입력값 (필터)
+            let oFilter = [];
+            let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+                pattern: "yyyyMMdd",
+                UTC: true
+            });
+            let oStartDate = oDateFormat.parse(oInput.Assigndate);
+            let oEndDate = oDateFormat.parse("20260701");
+            oFilter.push(new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate));
+            oFilter.push(new Filter("Memo", FilterOperator.EQ, oInput.Memo));
+
+            this.byId("idEmployeeTable").getBinding("items").filter(oFilter);
+        },
+        onSelectionChange: function(oEvent) {
+            let oData = oEvent.getParameters().listItem.getBindingContext().getObject();    // 선택한 열의 데이터 가져오기
+            let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            let oDialog = sap.ui.getCore().byId("idDialog");    
+
+            if(oDialog) {      
+                oDialog.setModel(oModel, "oDialogModel");
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.Dialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oDialogModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onSave: function() {
+            let oModel = sap.ui.getCore().byId("idDialog").getModel("oDialogModel");    // 다이얼로그에서 수정한 데이터 값
+            let oData = oModel.getData();
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno : oData.Empno,
+                Projod : oData.Projod
+            })
+            this.oDataModel.update(sPath, oData, {
+                success: function() {
+                    sap.m.MessageToast.show("수정 성공!");
+                    this.oDataModel.refresh();
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("수정 에러!");
+                }
+            })
+        },
+        onClose: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        }
+    });
+});
+```
+</br>
+
+**3) Main.view.xml**
+```html
+// assignment1
+<mvc:View controllerName="assignment1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:layout="sap.ui.layout"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" headerExpanded="true" toggleHeaderOnTitleClick="false">
+        <!-- DynamicPage Title -->
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <Title text="Header Title"/>
+                </f:heading>
+                <!-- <f:content>
+                    <OverflowToolbar>
+                    </OverflowToolbar>
+                </f:content> -->
+            </f:DynamicPageTitle>
+        </f:title>
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="false">
+                <fb:FilterBar id="filterbar" search="onSearch" persistencyKey="myPersKey" useToolbar="false" showGoOnFB="true" showFilterConfiguration="false">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Assigndate" groupName="Group1" label="Assign Date" visibleInFilterBar="true">
+                            <fb:control>
+                                <DatePicker value="{oInputModel>/Assigndate}" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Memo" groupName="Group1" label="Memo" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input value="{oInputModel>/Memo}"/>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <!-- <fb:FilterGroupItem name="Search" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Button text="검색버튼" press="onPress" />
+                            </fb:control>
+                        </fb:FilterGroupItem> -->
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <Table id="idEmployeeTable"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{/EmployeeSet}"
+                    selectionChange="onSelectionChange"
+                    class="sapFDynamicPageAlignContent"
+                    mode="SingleSelectLeft"
+                    width="auto">
+                <headerToolbar>
+                    <Toolbar>
+                        <Title text="Products" level="H2"/>
+                    </Toolbar>
+                </headerToolbar>
+                <columns>
+                    <Column width="12em">
+                        <Text text="Empno" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Projod" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Assigndate" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Role" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Memo" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Text text="{Empno}" />
+                            <Text text="{Projod}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{Role}" />
+                            <Text text="{Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </f:content>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+
+**4) Dialog.fragment.xml**
+```html
+// assignment1
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idDialog"
+            title="Select List"
+            contentHeight="40%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oDialogModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oDialogModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oDialogModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oDialogModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oDialogModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="저장" press=".onSave" />
+            <Button text="닫기" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
 ```
