Update 1-6. 프로그래밍 코드 최적화(02.06).md

--- a/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
+++ b/RAP/1-6. 프로그래밍 코드 최적화(02.06).md
@@ -1044,7 +1044,7 @@ sap.ui.define([
 </br>
 </br>
 
-### 과제 1
+### 과제 1 : 테이블 선택 후 다이얼로그를 통한 데이터 수정 실습
 - CRUD 프로그램 실습
 <img width="739" height="300" alt="image" src="https://github.com/user-attachments/assets/b8cf4b20-472f-4401-8d48-e3133c543ddd" />
 
