Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -42,21 +42,27 @@
 - `io_data_provider->read_entry_data` : 화면 입력값을 ABAP 변수로 읽어옴
 - `er_entity` : 저장 결과를 화면으로 다시 전달
 ```abap
-" ZCL_ZCODE_PERSON2_DPC_EXT : PERSONSET_CREATE_ENTITY
-  method PERSONSET_CREATE_ENTITY.
-    DATA: ls_entity TYPE ZCL_ZCODE_PERSON2_mpc=>ts_person,
-          ls_data   TYPE zcl2person.
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_CREATE_ENTITY
 
-    io_data_provider->read_entry_data(
-      IMPORTING es_data = ls_entity
-    ).
+  method EMPLOYEESET_CREATE_ENTITY.
+* POST 요청을 통해 실제 DB TABLE에 데이터를 추가하는 과정
+* BODY 에 담긴 생성 데이터를 io_data_provider를 통해 가져옴
+* DB Table에 Insert 후, 처리 결과를 ER_ENTITY로 전달
+
+    " Entity 구조(UI5 ↔ OData 통신용)와 DB 테이블 구조 분리
+    DATA: ls_entity TYPE ZCL_ZGWEMP_B03_MPC=>ts_employee,
+          ls_data TYPE ztempinfo_b03.
+
+    " es_data에 Request Body(JSON) 정보가 들어옴
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
     CHECK sy-subrc = 0.
     MOVE-CORRESPONDING ls_entity TO ls_data.
 
-    INSERT zcl2person FROM ls_data.
-
+* 실제 DB에 추가하기 전, 데이터 작업 가능
+    ls_data-memo = '이건 메모야~~'.
+    INSERT ztempinfo_b03 FROM ls_data.
     IF sy-subrc = 0.
-      MOVE ls_entity TO er_entity.
+      MOVE-CORRESPONDING ls_entity TO er_entity.
     ENDIF.
   endmethod.
 ```
@@ -66,3 +72,5 @@
 </br>
 </br>
 </br>
+
+### 2) Update
