Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -75,3 +75,6 @@
 </br>
 
 ### 2) Update
+
+- SAP Gateway Client에서 PUT(UPDATE) 요청으로 특정 Entity를 수정하고, UPDATE_ENTITY가 실행되어 DB 데이터가 변경되는 테스트 화면
+<img width="596" height="332" alt="image" src="https://github.com/user-attachments/assets/0b5b7f75-f7a3-4e4f-9907-8714be4fdd32" />
