--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -75,6 +75,30 @@
 </br>
 
 ### 2) Update
+- `ZCL_ZCODE_PERSON2_MPC=>TS_PERSON` : 화면에서 보내는 Person 데이터 구조
+```abap
+  METHOD employeeset_update_entity.
+* PUT 요청을 통해서 실제 테이블에 데이터를 변경하는 과정
+* BODY에 담긴 변경 대상 데이터를 io_data_provider로 얻어옴
+* DB Update를 진행
 
+    DATA: ls_entity TYPE zcl_zgwemp_b03_mpc=>ts_employee,
+          ls_data   TYPE ztempinfo_b03.
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO ls_data
+      WHERE empno = ls_entity-empno
+        AND projod = ls_entity-projod.
+    IF sy-subrc = 0.
+      " 만약, 별도의 DATA 세팅이 필요한 경우 여기서 ㅈ가성
+      " LS_DATA-MEMO = '이건 변경이야'.
+      ls_data-memo = ls_entity-memo.
+      ls_data-assigndate = ls_entity-assigndate.
+      ls_data-role = ls_entity-role.
+      UPDATE ztempinfo_b03 FROM ls_data.
+    ENDIF.
+  ENDMETHOD.
+```
 - SAP Gateway Client에서 PUT(UPDATE) 요청으로 특정 Entity를 수정하고, UPDATE_ENTITY가 실행되어 DB 데이터가 변경되는 테스트 화면
-<img width="596" height="332" alt="image" src="https://github.com/user-attachments/assets/0b5b7f75-f7a3-4e4f-9907-8714be4fdd32" />
+<img width="623" height="347" alt="image" src="https://github.com/user-attachments/assets/337c1a2b-df31-458c-bd93-936a54d8ad50" />
