Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -76,6 +76,7 @@
 
 ### 2) Update
 - `ZCL_ZCODE_PERSON2_MPC=>TS_PERSON` : 화면에서 보내는 Person 데이터 구조
+- `UPDATE_ENTITY` 는 응답으로 데이터를 돌려줄 필요가 없어서 `er_entity` 가 없어도 정상임
 ```abap
   METHOD employeeset_update_entity.
 * PUT 요청을 통해서 실제 테이블에 데이터를 변경하는 과정
