Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -78,6 +78,8 @@
 - `ZCL_ZCODE_PERSON2_MPC=>TS_PERSON` : 화면에서 보내는 Person 데이터 구조
 - `UPDATE_ENTITY` 는 응답으로 데이터를 돌려줄 필요가 없어서 `er_entity` 가 없어도 정상임
 ```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_UPDATE_ENTITY
+
   METHOD employeeset_update_entity.
 * PUT 요청을 통해서 실제 테이블에 데이터를 변경하는 과정
 * BODY에 담긴 변경 대상 데이터를 io_data_provider로 얻어옴
@@ -103,3 +105,42 @@
 ```
 - SAP Gateway Client에서 PUT(UPDATE) 요청으로 특정 Entity를 수정하고, UPDATE_ENTITY가 실행되어 DB 데이터가 변경되는 테스트 화면
 <img width="623" height="347" alt="image" src="https://github.com/user-attachments/assets/337c1a2b-df31-458c-bd93-936a54d8ad50" />
+</br>
+</br>
+</br>
+</br>
+
+### 3) Delete
+- DELETE 요청 시 URL로 전달된 키 값(`it_key_tab`)을 DB 구조에 매핑하여 해당 레코드를 테이블에서 삭제
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_DELETE_ENTITY
+
+  METHOD employeeset_delete_entity.
+    " Delete 요청을 통해서 실제 테이블 데이터를 삭제
+    " IT_KEY_TAB 파라미터에 들어온 값을 갖고
+    " 해당되는 데이터를 DB Table에서 삭제
+
+    " 1. DB 테이블과 동일한 구조의 변수 선언
+    " 2. IT_KEY_TAB 파라미터에 들어온 값으로 변수에 키 값 세팅
+    " 3. 변수에 해당되는 레코드를 DB Table에서 삭제
+    "    delete <db tab> FROM <structure>
+
+    " 실제 테스트.Body 없이 HTTP Method, URL만 구성
+    " => /EntitySet(key1='값',key2='값')
+
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+*      CASE ls_key-name.
+*        WHEN 'Empno'.
+*          ls_data-empno = ls_key-value.
+*        WHEN 'Projod'.
+*          ls_data-projod = ls_key-value.
+*        WHEN OTHERS.
+*      ENDCASE.
+    ENDLOOP.
+
+    DELETE ztempinfo_b03 FROM ls_data.
+  ENDMETHOD.
+```
