Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -144,3 +144,5 @@
     DELETE ztempinfo_b03 FROM ls_data.
   ENDMETHOD.
 ```
+- SAP Gateway Client에서 DELETE 요청으로 특정 Entity를 삭제하면 DELETE_ENTITY가 실행되어 DB 데이터가 삭제됨을 확인하는 테스트 화면
+<img width="673" height="334" alt="image" src="https://github.com/user-attachments/assets/c0f25fe0-313c-4425-bc91-dbecd49e9777" />
