Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -163,4 +163,185 @@
 </br>
 </br>
 
-**1) SAP GUI 코드
+**1) SAP GUI 코드**
+- GET_ENTITYSET
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
+
+  method EMPLOYEESET_GET_ENTITYSET.
+    DATA: lv_where_clause TYPE string.
+        " 전체 필터 조건을 SQL WHERE 절 문자열로 변환
+        lv_where_clause = io_tech_request_context->get_osql_where_clause( ).
+        SELECT * FROM ztempinfo_b03
+          INTO CORRESPONDING FIELDS OF TABLE et_entityset
+          WHERE (lv_where_clause).
+*    DATA: lr_memo TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_role TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_date TYPE /IWBEP/T_COD_SELECT_OPTIONS.
+*
+*    IF it_filter_select_options IS INITIAL.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+*    ELSE.
+*      " 만약 필터 정보가 들어왔다면, 필터 적용
+*      LOOP AT it_filter_select_options INTO DATA(ls_filter).
+*        CASE ls_filter-property.
+*          WHEN 'Memo'.
+*            APPEND LINES OF ls_filter-select_options TO lr_memo.
+*          WHEN 'Role'.
+*            APPEND LINES OF ls_filter-select_options TO lr_role.
+*          WHEN 'Projod'.
+*            APPEND LINES OF ls_filter-select_options TO lr_projod.
+*          WHEN 'Assigndate'.
+*            APPEND LINES OF ls_filter-select_options TO lr_date.
+*          WHEN OTHERS.
+*        ENDCASE.
+*      ENDLOOP.
+*
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+*        WHERE Memo IN lr_memo
+*          AND Role IN lr_role
+*          AND projod IN lr_projod
+*          AND assigndate IN lr_date.
+*    ENDIF.
+**********************************************************************
+*    IF iv_filter_string IS INITIAL.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+*    ELSE.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+*        WHERE (iv_filter_string).
+*    ENDIF.
+  endmethod.
+```
+- GET_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITY
+
+  method EMPLOYEESET_GET_ENTITY.
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    "/EntitySet(key1='값1',key2='값2')
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name. " 키 프로퍼티의 이름(Entity기준)
+        WHEN 'Empno'.
+          ls_data-empno = ls_key-value.
+        WHEN 'Projod'.
+          ls_data-projod = ls_key-value.
+        WHEN OTHERS.
+      ENDCASE.
+    ENDLOOP.
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO @DATA(ls_result)
+      WHERE empno = @ls_data-empno
+        AND projod = @ls_data-projod.
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_result TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- CREATE_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_CREATE_ENTITY
+
+  method EMPLOYEESET_CREATE_ENTITY.
+* POST 요청을 통해 실제 DB TABLE에 데이터를 추가하는 과정
+* BODY 에 담긴 생성 데이터를 io_data_provider를 통해 가져옴
+* DB Table에 Insert 후, 처리 결과를 ER_ENTITY로 전달
+
+    " Entity 구조(UI5 ↔ OData 통신용)와 DB 테이블 구조 분리
+    DATA: ls_entity TYPE ZCL_ZGWEMP_B03_MPC=>ts_employee,
+          ls_data TYPE ztempinfo_b03.
+
+    " es_data에 Request Body(JSON) 정보가 들어옴
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+
+* 실제 DB에 추가하기 전, 데이터 작업 가능
+    ls_data-memo = '이건 메모야~~'.
+    INSERT ztempinfo_b03 FROM ls_data.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_entity TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- UPDATE_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_UPDATE_ENTITY
+
+  METHOD employeeset_update_entity.
+* PUT 요청을 통해서 실제 테이블에 데이터를 변경하는 과정
+* BODY에 담긴 변경 대상 데이터를 io_data_provider로 얻어옴
+* DB Update를 진행
+
+    DATA: ls_entity TYPE zcl_zgwemp_b03_mpc=>ts_employee,
+          ls_data   TYPE ztempinfo_b03.
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO ls_data
+      WHERE empno = ls_entity-empno
+        AND projod = ls_entity-projod.
+    IF sy-subrc = 0.
+      " 만약, 별도의 DATA 세팅이 필요한 경우 여기서 ㅈ가성
+      " LS_DATA-MEMO = '이건 변경이야'.
+      ls_data-memo = ls_entity-memo.
+      ls_data-assigndate = ls_entity-assigndate.
+      ls_data-role = ls_entity-role.
+      UPDATE ztempinfo_b03 FROM ls_data.
+    ENDIF.
+  ENDMETHOD.
+```
+- DELETE_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_DELETE_ENTITY
+
+  METHOD employeeset_delete_entity.
+    " Delete 요청을 통해서 실제 테이블 데이터를 삭제
+    " IT_KEY_TAB 파라미터에 들어온 값을 갖고
+    " 해당되는 데이터를 DB Table에서 삭제
+
+    " 1. DB 테이블과 동일한 구조의 변수 선언
+    " 2. IT_KEY_TAB 파라미터에 들어온 값으로 변수에 키 값 세팅
+    " 3. 변수에 해당되는 레코드를 DB Table에서 삭제
+    "    delete <db tab> FROM <structure>
+
+    " 실제 테스트.Body 없이 HTTP Method, URL만 구성
+    " => /EntitySet(key1='값',key2='값')
+
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+*      CASE ls_key-name.
+*        WHEN 'Empno'.
+*          ls_data-empno = ls_key-value.
+*        WHEN 'Projod'.
+*          ls_data-projod = ls_key-value.
+*        WHEN OTHERS.
+*      ENDCASE.
+    ENDLOOP.
+
+    DELETE ztempinfo_b03 FROM ls_data.
+  ENDMETHOD.
+```
+</br>
+
+**2) Main.controller.js**
+
+</br>
+
+**3) Main.view.xml**
+</br>
+
+**4) CreateDialog.fragment.xml**
+
+</br>
+
+**5) UpdateDialog.fragment.xml**
